# kvcdn-cli

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/src/: auth.ts  index.ts  types.ts
ci/dagger/: .gitignore  dagger.json  go.mod  go.sum  main.go
dagger/: main.go
deploy/local/: README.md
docs/adr/: 0001-artifact-data-unencrypted-at-rest.md
docs/ops/: multi-bucket-runbook.md
docs/specs/: 2026-06-12-auth-upload-oidc-design.md
pocket-id/: Dockerfile  README.md  entrypoint.sh  fly.toml
pocket-id/cloudflared/: fly.toml
pocket-id/dagger/: dagger.json  go.mod  main.go
scripts/: build-backend-image.sh  build-release.sh  kind-with-registry.sh  validate-adapters.sh
src/: admin.rs  api.rs  api_key.rs  benchmark.rs  callback_server.rs  cli.rs  common.rs  config.rs  continue_mod.rs  credential_store.rs  delete.rs  diag.rs  download.rs  http.rs  kv_io.rs  kv_quant.rs  lib.rs  list.rs  login.rs  logout.rs  main.rs  model.rs  oidc.rs  output.rs  plot.rs  prefill.rs  quant.rs  quota.rs  qwen3_model.rs  telemetry.rs  token_store.rs  transfer.rs  upload.rs  verify.rs  whoami.rs
src/core/: crypto.rs  mod.rs  validation.rs
src/hosted/: admin.rs  api.rs  api_key.rs  delete.rs  http.rs  (+12 more)
telemetry-service/: Dockerfile  fly.toml  package-lock.json  package.json  tsconfig.json
tests/: adapter_validation.rs  telemetry_delivery.rs
(+87 files in other folders)
