[package]
name = "kvcdn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
clap = { version = "4.6.1", features = ["derive"] }
hf-hub = "0.5.0"
safetensors = "0.8.0"
serde = "1.0.228"
serde_json = "1.0.150"
tokenizers = "0.23.1"
