[package]
name = "kvcdn"
version = "0.2.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aes-gcm = "0.10"
base64 = "0.22"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6"
hex = "0.4"
hf-hub = "0.5.0"
indicatif = "0.18"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
safetensors = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
tiny_http = "0.12"
tokenizers = "0.23.1"
toml = "0.8"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ab_glyph"] }
fontdb = "0.16"
url = "2.5"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
mockito = "1.6"
tempfile = "3.14"
proptest = "1"
